--- a/HTML/foundItems.html
+++ b/HTML/foundItems.html
@@ -15,7 +15,7 @@
         <div class="row">
             <ul class="registered-users-list clearfix">
                 <li class="thumbnail" data-ng-repeat="item in listCtrl.items" style="margin:auto; text-align:center">
-                    <a class="lightbox" href="../images/park.jpg">
+                    <a class="lightbox" href="...>
                         <img src="https://cnet2.cbsistatic.com/img/SVArV0NpzrZzcyVYNgybsAB_5e8=/770x433/2017/09/12/61096602-8e41-41d5-a63d-0ed945435e49/iphonexfl.jpg">
                     </a>
 
@@ -58,3 +58,4 @@
         </div>
     </div>
 </div>
+    </div>
